[package]
name = "wasm-practice"
version = "0.1.0"
authors = ["Yorinton <ka2ki.yori@outlook.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
